fixed send mail link

--- a/application/views/scripts/admin/index.phtml
+++ b/application/views/scripts/admin/index.phtml
@@ -9,7 +9,7 @@
         <a href="<?= $this->url(array('controller' => 'admin' , 'action' => 'newsletter-list')) ?>">
             Lista över nyhetsbrev</a></div>
     
-    <div class="span-6 box"><a href="<?= $this->url(array('controller' => 'admin' , 'action' => 'send-newsletter')) ?>">Send newsletters manual</a></div>
+    <div class="span-6 box"><a href="<?= $this->url(array('controller' => 'admin' , 'action' => 'send-mail')) ?>">Send newsletters manual</a></div>
     
     
 </div>
